Change default branch in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Run tests
 on:
   push:
     branches:
-      - youngdae/abstraction
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
   schedule:
