--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Youngdae Kim <youngdae@anl.gov>", "Kibaek Kim <kimk@anl.gov>", "Weiq
 version = "0.2.0"
 
 [deps]
+AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 ExaTron = "28b18bf8-76f9-41ea-81fa-0f922810b349"
@@ -17,8 +18,10 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+AMDGPU = "0.3"
 CUDA = "3.4"
 ExaTron = "2"
 FileIO = "1.14"
+KernelAbstractions = "0.8"
 MPI = "0.19"
 julia = "1.7"
