--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+Adapt = "3"
 CUDA = "4.1"
 ExaTron = "3"
 FileIO = "1.14"
